配置 tmux 使得打开 tmux 时就开启三个窗口

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+
 #设置PREFIX为Ctrl-a
 set -g prefix C-a
 #解除Ctrl-b与PREFIX的对应关系
@@ -44,3 +45,10 @@ set -g status-justify centre
 #开启window事件提示
 setw -g monitor-activity on
 set -g visual-activity on
+#session name 这样就可以在 bash 里 alias tmux='tmux attach -t ycc'
+new -s ycc
+#new window 1
+neww
+#new window 2
+neww
+selectw -t 0
