--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-
 #设置PREFIX为Ctrl-a
 set -g prefix C-a
 #解除Ctrl-b与PREFIX的对应关系
@@ -8,44 +7,48 @@ setw -g mode-keys vi
 #将r键设置为加载配置文件，并显示"reloaded!"信息
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #设置终端颜色为256色
-#set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 #开启status-bar uft-8支持
 set -g status-utf8 on
 #设置pan前景色
-set -g pane-border-fg green
+set -g pane-border-fg black
 #设置pane背景色
-set -g pane-border-bg black
+set -g pane-border-bg white
 #设置活跃pane前景色
-set -g pane-active-border-fg white
+set -g pane-active-border-fg black
 #设置活跃pane背景色
-set -g pane-active-border-bg yellow
+set -g pane-active-border-bg white
 #设置消息前景色
-set -g message-fg white
+set -g message-fg black
 #设置消息背景色
-set -g message-bg black
+set -g message-bg white
 #设置消息高亮显示
 set -g message-attr bright
 #设置status-bar颜色
-set -g status-fg white
-set -g status-bg black
+set -g status-fg black
+set -g status-bg white
 #设置窗口列表颜色
-setw -g window-status-fg cyan
+setw -g window-status-fg black
 setw -g window-status-bg default
 setw -g window-status-attr dim
 #设置当前窗口在status bar中的颜色
 setw -g window-status-current-fg white
-setw -g window-status-current-bg red
+setw -g window-status-current-bg magenta
 setw -g window-status-current-attr bright
+#copy-mode figures color
+setw -g mode-fg white
+setw -g mode-bg magenta
+setw -g mode-attr bright
 #设置status bar格式
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%d %b %R"
+set -g status-left "#[fg=black]Session: #S #[fg=magenta]#I #[fg=black]#P"
+set -g status-right "#[fg=black]%d %b %R"
 set -g status-interval 60
 set -g status-justify centre
 #开启window事件提示
 setw -g monitor-activity on
 set -g visual-activity on
-#session name 这样就可以在 bash 里 alias tmux='tmux attach -t ycc'
+#新建一个 socket
 new -s ycc
 #new window 1
 neww
